# 01_otus_build_and_deploy

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: CMakeLists.txt
